# finances

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  download_htmx.sh  go-installs.txt  package-lock.json  package.json  seeds.sql  test.go
app/: .air.toml  .app.env  go.mod  go.sum  main.go  sqlc.yaml
app/controllers/: controllers.go  validation.go
app/db/: db.go
app/db/migration/: 000001_schema.down.sql  000001_schema.up.sql
app/db/query/: user.sql
app/db/sqlc/: models.go  user.sql.go
app/models/: server.go  user.go
app/public/css/: styles.css
app/util/: config.go  hash.go  util.go
app/views/: 404.templ  500.templ  base.templ  index.templ  login.templ  loginForm.templ  register.templ  registerForm.templ
initdb/: create_test_db.sql
migrations/: 20260305_initial.sql  20260320_add_indexes.sql  20260325_fix_billing_day_constraints.sql  20260326_add_category_name_pt.sql
src/: config.rs  export.rs  lib.rs  main.rs
src/db/: accounts.rs  budgets.rs  categories.rs  credit_card_payments.rs  installments.rs  mod.rs  notifications.rs  recurring.rs  reports.rs  transactions.rs  transfers.rs
src/models/: account.rs  budget.rs  category.rs  credit_card_payment.rs  installment.rs  mod.rs  notification.rs  recurring.rs  report.rs  transaction.rs  transfer.rs
src/ui/: app.rs  event.rs  i18n.rs  mod.rs  render.rs
tests/: category_form.rs  date_utils.rs  db.rs  export.rs  format.rs  i18n.rs  input.rs  installment_form.rs  models.rs  transactions_filter.rs  transactions_form.rs
(+18 files in other folders)
