[package]
name = "finances"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "rust_decimal", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
rust_decimal = { version = "1.39", features = ["db-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
rust_decimal_macros = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "rust_decimal", "chrono"] }
tokio = { version = "1", features = ["full"] }
